# amplifier-code-mode

./: .gitignore  README.md  announcement.md  bundle.md
.amplifier/: bundle.md  settings.yaml
.amplifier/agents/: bundle-dev.md
agents/: code-executor.md
behaviors/: code-mode.yaml
context/: instructions.md
modes/: code-mode.md
modules/loop-code/: pyproject.toml
modules/loop-code/amplifier_module_loop_code/: __init__.py
modules/loop-code/tests/: test_mount.py
modules/tool-code-mode/: pyproject.toml
modules/tool-code-mode/amplifier_module_tool_code_mode/: __init__.py
modules/tool-code-mode/tests/: test_mount.py
