[project]
name = "amplifier-module-loop-code"
version = "0.1.0"
description = "Code Mode orchestrator — LLM writes executable Python to call tools instead of native tool-call format"
requires-python = ">=3.11"
license = { text = "MIT" }
# amplifier-core is a peer dependency — do NOT declare it here
dependencies = []

[project.entry-points."amplifier.modules"]
# "loop-code" must match the `module:` field in bundle.md / behaviors/*.yaml
loop-code = "amplifier_module_loop_code:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_loop_code"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
