    [project]
    name = "amplifier-module-tool-code-mode"
    version = "0.1.0"
    description = "tool_code_mode — LLM writes Python to orchestrate multi-tool workflows in-process."
    requires-python = ">=3.11"
    license = { text = "MIT" }
    # amplifier-core is a peer dependency — do NOT declare it here
    dependencies = []

    [project.entry-points."amplifier.modules"]
    # "tool-code-mode" must match the `module:` field in bundle YAML
    tool-code-mode = "amplifier_module_tool_code_mode:mount"

    [build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

    [tool.hatch.build.targets.wheel]
    packages = ["amplifier_module_tool_code_mode"]

    [tool.pytest.ini_options]
    testpaths = ["tests"]
    asyncio_mode = "auto"
    asyncio_default_fixture_loop_scope = "function"

    [tool.ruff]
    target-version = "py311"
    line-length = 99

    [tool.ruff.lint]
    select = ["E", "F", "I", "UP", "B", "SIM"]
    ignore = ["E501"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
    